[metadata]
name = hxl_proxy
version = attr: hxl_proxy.__version__
author = David Megginson
author_email = megginson@un.org
description = Flask-based web data proxy for the Humanitarian Exchange Language (HXL)
long_description = file: README.md
keywords = data, hxl
license = Public Domain
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
project_urls =
    Documentation = https://github.com/HXLStandard/hxl-proxy/wiki
    GitHub = https://github.com/HXLStandard/hxl-proxy/
    Changelog = https://github.com/HXLStandard/hxl-proxy/blob/prod/CHANGELOG

[options]
include_package_data = True
zip_safe = True
packages = hxl_proxy
python_requires = >=3.7
install_requires =
    urllib3<1.27,>1.21.1 # avoid caching bug
    requests_cache
    ckanapi>=3.5
    flask>=2.2.5<2.3     # 2.3 messes up pip dependencies
    #libhxl @ git+https://github.com/HXLStandard/libhxl-python.git@dev # for development
    libhxl==5.1        # for release
    flask-caching
    redis
    structlog
    typing_extensions    # shouldn't be needed, but setuptools fails to pick it up
dependency_links =
    git+https://github.com/HXLStandard/libhxl-python@dev#egg=libhxl
test_suite = tests
tests_require =
    mock
